Match moderator and janitor colors

--- a/release/eSixCafe.user.css
+++ b/release/eSixCafe.user.css
@@ -113,8 +113,8 @@ if themep == muted {
 		--user-contributor: #b0e7ad;
 		--user-admin:#cc946d;
 		--user-admin-hover: #eeae82;
-		--user-moderator:#cc946d;
-		--user-moderator-hover: #eeae82;
+		--user-moderator:#7dafd8;
+		--user-moderator-hover: #8fc8f7;
 		--user-former-staff: #6cd5aa;
 		--user-former-staff-hover: #7ff7c6;
 		--user-janitor: #7dafd8;
@@ -197,8 +197,8 @@ if themep == muted {
 		--user-contributor: #b0e7ad;
 		--user-admin:#cc946d;
 		--user-admin-hover: #eeae82;
-		--user-moderator:#cc946d;
-		--user-moderator-hover: #eeae82;
+		--user-moderator:#7dafd8;
+		--user-moderator-hover: #8fc8f7;
 		--user-former-staff: #6cd5aa;
 		--user-former-staff-hover: #7ff7c6;
 		--user-janitor: #7dafd8;
@@ -278,8 +278,8 @@ if themep == muted {
 		--user-contributor-hover: #b0e7ad;
 		--user-admin:#cc946d;
 		--user-admin-hover: #eeae82;
-		--user-moderator:#cc946d;
-		--user-moderator-hover: #eeae82;
+		--user-moderator:#7dafd8;
+		--user-moderator-hover: #8fc8f7;
 		--user-former-staff: #6cd5aa;
 		--user-former-staff-hover: #7ff7c6;
 		--user-janitor: #7dafd8;
@@ -359,8 +359,8 @@ if themep == muted {
 		--user-contributor-hover: #b0e7ad;
 		--user-admin:#cc946d;
 		--user-admin-hover: #eeae82;
-		--user-moderator:#cc946d;
-		--user-moderator-hover: #eeae82;
+		--user-moderator:#7dafd8;
+		--user-moderator-hover: #8fc8f7;
 		--user-former-staff: #6cd5aa;
 		--user-former-staff-hover: #7ff7c6;
 		--user-janitor: #7dafd8;
@@ -442,8 +442,8 @@ if themep == muted {
 		--user-contributor-hover: #b0e7ad;
 		--user-admin:#cc946d;
 		--user-admin-hover: #eeae82;
-		--user-moderator:#cc946d;
-		--user-moderator-hover: #eeae82;
+		--user-moderator:#7dafd8;
+		--user-moderator-hover: #8fc8f7;
 		--user-former-staff: #6cd5aa;
 		--user-former-staff-hover: #7ff7c6;
 		--user-janitor: #7dafd8;
@@ -534,8 +534,8 @@ if themep == classic {
 		--user-contributor-hover: #75fd75;
 		--user-admin:#e69500;
 		--user-admin-hover: #9d6703;
-		--user-moderator:#e69500;
-		--user-moderator-hover: #9d6703;
+		--user-moderator:#d82828;
+		--user-moderator-hover: #cc5151;
 		--user-former-staff: #3fd6ba;
 		--user-former-staff-hover: #5eebd1;
 		--user-janitor: #d82828;
@@ -622,8 +622,8 @@ if themep == classic {
 		--user-contributor-hover: #75fd75;
 		--user-admin:#e69500;
 		--user-admin-hover: #9d6703;
-		--user-moderator:#e69500;
-		--user-moderator-hover: #9d6703;
+		--user-moderator:#d82828;
+		--user-moderator-hover: #cc5151;
 		--user-former-staff: #3fd6ba;
 		--user-former-staff-hover: #5eebd1;
 		--user-janitor: #d82828;
@@ -707,8 +707,8 @@ if themep == classic {
 		--user-contributor-hover: #75fd75;
 		--user-admin:#e69500;
 		--user-admin-hover: #9d6703;
-		--user-moderator:#e69500;
-		--user-moderator-hover: #9d6703;
+		--user-moderator:#d82828;
+		--user-moderator-hover: #cc5151;
 		--user-former-staff: #3fd6ba;
 		--user-former-staff-hover: #5eebd1;
 		--user-janitor: #d82828;
@@ -792,8 +792,8 @@ if themep == classic {
 		--user-contributor-hover: #75fd75;
 		--user-admin:#e69500;
 		--user-admin-hover: #9d6703;
-		--user-moderator:#e69500;
-		--user-moderator-hover: #9d6703;
+		--user-moderator:#d82828;
+		--user-moderator-hover: #cc5151;
 		--user-former-staff: #3fd6ba;
 		--user-former-staff-hover: #5eebd1;
 		--user-janitor: #d82828;
@@ -877,8 +877,8 @@ if themep == classic {
 		--user-contributor-hover: #75fd75;
 		--user-admin:#e69500;
 		--user-admin-hover: #9d6703;
-		--user-moderator:#e69500;
-		--user-moderator-hover: #9d6703;
+		--user-moderator:#d82828;
+		--user-moderator-hover: #cc5151;
 		--user-former-staff: #3fd6ba;
 		--user-former-staff-hover: #5eebd1;
 		--user-janitor: #d82828;
