--- a/release/eSixCafe.user.css
+++ b/release/eSixCafe.user.css
@@ -1,7 +1,7 @@
 /* ==UserStyle==
 @name           eSix Café
 @namespace      mandorinn
-@version        1.6.4
+@version        1.6.5
 @description    A muted and easy on the eyes style for e621. Big credits to Faucet for the bug reports so far, thank you!
 @author         mandorinn [(www.mandorinn.dev)], faucet [(https://e621.net/users/601225)]
 @updateURL		https://github.com/mandorinn/eSix-Cafe/raw/main/release/eSixCafe.user.css
@@ -3138,19 +3138,17 @@ if themep == classic {
 		border-radius: 8px;
 	}
 /* Stats page */
-	.rounded, .stats-rounded {
-		background-color: var(--bg)!important;
-		overflow: hidden;
-		box-shadow: 0 0 .25rem #000!important;
-	}
-	.rounded tr:nth-child(2n), .stats-rounded tr:nth-child(2n) {
-		background-color: var(--bg-400)!important;
-		td {
-			border-top-color: var(--bg-300)!important;
-			border-bottom-color: var(--bg-300)!important;
+	#c-stats {
+		table.striped {
+			box-shadow: 0 0 .25rem #000!important;
 		}
-		tr:last-child td {
-			border-bottom: none!important;
+		table.striped tbody {
+			tr:nth-child(2n) td {
+				background-color: var(--bg-400);
+			}
+			tr:last-child {
+				border-bottom: none!important;
+			}
 		}
 	}
 /* Implications page */
