--- a/release/eSixCafe.user.css
+++ b/release/eSixCafe.user.css
@@ -1,7 +1,7 @@
 /* ==UserStyle==
 @name           eSix Café
 @namespace      mandorinn
-@version        1.6.7
+@version        1.6.8
 @description    A muted and easy on the eyes style for e621. Big credits to Faucet for the bug reports so far, thank you!
 @author         mandorinn [(www.mandorinn.dev)], faucet [(https://e621.net/users/601225)]
 @updateURL		https://github.com/mandorinn/eSix-Cafe/raw/main/release/eSixCafe.user.css
@@ -2029,14 +2029,14 @@ if themep == classic {
 		padding: 0 .5rem 0 .5rem;
 	}
 	/* Post Description */
-	.styled-dtext blockquote, .styled-dtext div.expandable, .styled-dtext pre {
+	.styled-dtext details, .styled-dtext div.expandable, .styled-dtext pre {
 		background-color:var(--bg)!important;
 		border-left-color:var(--elements-highlight)!important;
 		color:var(--base-text);
 		border-right: none!important;
 		border-top: none!important;
 		border-bottom: none!important;
-	.styled-dtext div.expandable, blockquote {
+	.styled-dtext div.expandable, details {
 			border-right: none;
 			border-top: none;
 			border-bottom: none;
@@ -2055,18 +2055,6 @@ if themep == classic {
 		width: .75rem;
 		aspect-ratio: 1/1;
 		height:100%;
-	}
-	.styled-dtext div.expandable > div.expandable-header > .section-arrow::after {
-		content: "►";
-		position: relative;
-		height: 1ch;
-		transition: 100ms;
-		transform: translateY(-30%);
-	}
-	.styled-dtext div.expandable.expanded > div.expandable-header > .section-arrow::after{
-		transform: rotate(90deg)!important;
-		content: "►";
-		transform-origin: bottom;
 	}
 	/* Comments */
 	.comment-post-grid {
