--- a/release/eSixCafe.user.css
+++ b/release/eSixCafe.user.css
@@ -1,7 +1,7 @@
 /* ==UserStyle==
 @name           eSix Café
 @namespace      mandorinn
-@version        1.6.8
+@version        1.6.9
 @description    A muted and easy on the eyes style for e621. Big credits to Faucet for the bug reports so far, thank you!
 @author         mandorinn [(www.mandorinn.dev)], faucet [(https://e621.net/users/601225)]
 @updateURL		https://github.com/mandorinn/eSix-Cafe/raw/main/release/eSixCafe.user.css
@@ -3144,6 +3144,7 @@ if themep == classic {
 	}
 /* Implications page */
 	.styled-dtext blockquote {
+		
 		div.expandable {
 			background-color: var(--bg-300)!important;
 		}
@@ -3227,6 +3228,11 @@ if themep == classic {
 	}
 	div#c-comments div#a-show .post {
 		margin: .5rem auto 1rem auto;
+	}
+	.comment-post-grid .content .styled-dtext blockquote {
+		border: none;
+		border-left: .25rem solid var(--color-danger);
+		border-left-color: var(--elements-highlight) !important;
 	}
 	.comment-post-grid .styled-dtext .blacklisted {
 		max-width: 150px !important;
