Fix quotes everywhere, not just comments

--- a/release/eSixCafe.user.css
+++ b/release/eSixCafe.user.css
@@ -2236,11 +2236,8 @@ if themep == classic {
 	.comment-post-grid .content {
 		margin: .5rem;
 		color: var(--base-text)!important;
-		blockquote {
-			background-color: rgba(255,255,255,.035)!important;
-			blockquote {
-				margin: .5rem;
-			}
+		blockquote blockquote {
+			margin: .5rem;
 		}
 		pre {
 		background-color: var(--bg-400)!important;
@@ -3229,13 +3226,15 @@ if themep == classic {
 	div#c-comments div#a-show .post {
 		margin: .5rem auto 1rem auto;
 	}
-	.comment-post-grid .content .styled-dtext blockquote {
+	.comment-post-grid .styled-dtext .blacklisted {
+		max-width: 150px !important;
+	}
+/* DText */
+	.styled-dtext blockquote {
 		border: none;
 		border-left: .25rem solid var(--color-danger);
 		border-left-color: var(--elements-highlight) !important;
-	}
-	.comment-post-grid .styled-dtext .blacklisted {
-		max-width: 150px !important;
+		background-color: rgba(255,255,255,.035)!important;
 	}
 /* Settings Page */
 	a#delete-account {
