--- a/release/eSixCafe.user.css
+++ b/release/eSixCafe.user.css
@@ -1,7 +1,7 @@
 /* ==UserStyle==
 @name           eSix Café
 @namespace      mandorinn
-@version        1.7.0
+@version        1.7.1
 @description    A muted and easy on the eyes style for e621. Big credits to Faucet for the bug reports so far, thank you!
 @author         mandorinn [(www.mandorinn.dev)], faucet [(https://e621.net/users/601225)]
 @updateURL		https://github.com/mandorinn/eSix-Cafe/raw/main/release/eSixCafe.user.css
@@ -1240,7 +1240,7 @@ if themep == classic {
 		border-radius: 2px 8px 8px 8px;
 		overflow:hidden;
 	}
-	ul.ui-autocomplete li:hover * {
+	ul.ui-autocomplete li:hover *, .ui-state-active,  {
 		border: none;
 		background-color: var(--bg)!important;
 	}
@@ -2250,8 +2250,10 @@ if themep == classic {
 			.content-menu {
 				margin: .5rem 0;
 				margin-top: 1rem;
+				width:fit-content;
 				menu {
 					display:flex;
+					gap: .5rem;
 					align-items: center;
 					color: transparent!important;
 					user-select: none;
@@ -2269,7 +2271,7 @@ if themep == classic {
 		p.info {
 			padding-bottom: .5rem;
 		}
-		.re621-comment-reply:hover, .re621-forum-post-reply:hover, .reply-link:hover, .blip-reply-link:hover, a[href^="/blips/"]:hover {
+		.re621-comment-reply:hover, .re621-forum-post-reply:hover, .reply-link:hover, .blip-reply-link:hover, a.blip-atme-link:hover {
 			&::before {
 				background-color: var(--bg-300)!important;
 			}
@@ -2295,14 +2297,13 @@ if themep == classic {
 				mix-blend-mode: soft-light;
 			}
 		}
-		.content-menu a[href^="/blips/"]{
+		.content-menu a.blip-atme-link {
 			font-size: 0;
 			display:flex;
 			align-items: center;
 			justify-content: center;
 			width: 26px;
 			position:relative;
-			margin-right:.5rem;
 			&::before {
 				content: "";
 				aspect-ratio: 1/1;
@@ -2404,7 +2405,7 @@ if themep == classic {
 				background-color: var(--bg-300);
 			}
 		}
-		.re621-comment-copy-id, .re621-forum-post-copy-id {
+		.re621-comment-copy-id, .re621-forum-post-copy-id, .blip {
 			font-size: 0;
 			display:flex;
 			align-items: center;
@@ -2426,12 +2427,12 @@ if themep == classic {
 				mix-blend-mode: soft-light;
 			}
 		}
-		a[class*="-hide-link"]:hover, a[data-confirm="Are you sure you want to hide this forum topic?"]:hover {
+		a[class*="-hide-link"]:hover, a[data-confirm^="Are you sure you want to hide this"]:hover {
 			&::before {
 				background-color: var(--bg-300);
 			}
 		}
-		a[class*="-hide-link"], a[data-confirm="Are you sure you want to hide this forum topic?"] {
+		a[class*="-hide-link"], a[data-confirm^="Are you sure you want to hide this"] {
 			font-size: 0;
 			display:flex;
 			align-items: center;
@@ -2452,12 +2453,12 @@ if themep == classic {
 				mix-blend-mode: soft-light;
 			}
 		}
-		a[class*="edit_"]:hover {
+		a[class*="edit_"]:hover, a[href*="edit"]:hover {
 			&::before {
 				background-color: var(--bg-300);
 			}
 		}
-		a[class*="edit_"] {
+		a[class*="edit_"], a[href*="edit"] {
 			font-size: 0;
 			display:flex;
 			align-items: center;
