--- a/release/eSixCafe.user.css
+++ b/release/eSixCafe.user.css
@@ -4053,6 +4053,13 @@ if themep == classic {
 	div#c-uploads div#a-new .border-bottom {
 		border-bottom: 2px solid var(--bg-300);
 	}
+	div#c-uploads div#a-new .col2 .fileinput-wrapper .fileinput {
+		background: var(--bg-400);
+		border: 2px dashed var(--bg-400);
+	}
+	div#c-uploads div#a-new .col2 .linkinput-wrapper .linkinput {
+		background: var(--bg-300);
+	}
 	input[type="file"] {
 		background-color: var(--bg-400);
 		border-radius: 4px;
@@ -4694,6 +4701,11 @@ if themep == classic {
 		margin-left: 1rem!important;
 		margin-right: 1rem!important;
 	}
+	}
+
+	/* Security page */
+	div#c-security div#a-index .settings-section {
+		background-color: var(--bg-400);
 	}
 	}
 
